# tournament_system

./: .env  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/api/: tournament.py
app/models/: base.py  tournament.py
app/repositories/: tournament.py
app/schemas/: tournament.py
app/services/: tournament.py
tests/: test_registration.py
